CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(camel-euclid)

SET( BASE_DIR ${CMAKE_SOURCE_DIR} )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BASE_DIR}/lib )
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BASE_DIR}/lib )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BASE_DIR}/bin )

set(INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

set(INSTALL_TARGETS_DEFAULT_ARGS
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
        ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
)

add_subdirectory(vector/src)

file(GLOB vector_hdrs ${PROJECT_SOURCE_DIR}/vector/include/*.h ${PROJECT_SOURCE_DIR}/vector/include/*.hxx)
install(FILES ${vector_hdrs} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/usr/local/include/camel-euclid/vector")

export(PACKAGE camel-euclid)